# LIFEGUARD

./: README.md  agent1_grid_sim.py  commander_intent_system.py  config.json  create_offline_db.py  lifeguard.py  lifeguard.spec  pyi_rth_audio.py  pyproject.toml  requirements.txt  run_gui.py  setup.sh
docs/: architecture.md
src/lifeguard/: __init__.py  __main__.py  gui.py
src/lifeguard/components/: __init__.py  mavlink_io.py  nlu.py  stt.py
src/lifeguard/config/: __init__.py  config_manager.py  settings.py
src/lifeguard/system/: __init__.py  exceptions.py  lifeguard_system.py  main_controller.py  state.py  workers.py
src/lifeguard/utils/: __init__.py  audio_processing.py  text_normalization.py
tests/: test_integration.py  test_nlu.py  test_utils.py
